2004-08-17  Richard Levitte  <richard@levitte.org>

	* monotone.texi (Working Copy): Change the description of
	'monotone revert' to explain what happens when there are
	arguments.

2004-08-16  Richard Levitte  <richard@levitte.org>

	* monotone.texi (OPTIONS): Add a description of --ticker.

	* ui.cc, ui.hh: Rethink the writing conditions as the ticks being
	"dirty" when they have changed since the last print.  That way,
	it's very easy to see when they need being printed.  This fixes a
	small bug where, in some cases, the exact same tick output is
	produced twice, once before a separate message, and once after,
	when a ticker is actually being removed.
	(tick_write_dot::write_ticks): Add a line that describes the
	ticks, including the amount of each tick per short name.

2004-08-15  Richard Levitte  <richard@levitte.org>

	fix bug 8733
	* ui.cc, ui.hh: Define a separate tick writer struct, and two
	subclasses, one that write counters, and one that writes progress
	characters.  As a consequence, move the count to the ticker class
	itself, and have the user interface contain a map of pointers to
	tickers instead of a map of counters, so data is easier to expand
	and access in a consistent manner.  Finally, correct a few errors
	in the checks for when ticks should be written, and make sure the
	final value gets written when the tickers are removed.

	* cert.cc (write_ancestry_paths):
	* database.cc (rehash):
	* netsync.cc (call_server, rebuild_merkle_trees):
	* rcs_import.cc (import_cvs_repo, cvs_history): Adapt to the new
	tickers.

	* monotone.cc: Add the option '--ticker' which takes the values
	"dot" or "count" to express which type of tick writer to use.  As
	a result, set the tick writer to be the progress dot kind or the
	counting type.

2004-08-12  graydon hoare  <graydon@pobox.com>

	fix bug 9884
	* tests/t_singlenetsync.at: sleep 5
	* tests/t_netsync.at: sleep 5 

2004-08-05  Richard Levitte  <richard@levitte.org>
