@@ -1,3 +1,9 @@
+2004-09-01  Derek Scherger  <derek@echologic.com>
+
+	* lua.{cc,hh} (hook_ignore_branch): new hook
+	* commands.cc (ls_branches): call it
+	* monotone.texi (Hook Reference): describe it
+
 2004-08-17  Richard Levitte  <richard@levitte.org>
 
 	* monotone.texi (Working Copy): Change the description of
